# cmake-templates

./: .gitignore
1-with-lib/: CMakeLists.txt
1-with-lib/libfoo/: CMakeLists.txt
1-with-lib/src/: hello.c
2-ext-lib/: CMakeLists.txt  build.sh
2-ext-lib/libfoo/config/: foo-config-noconfig.cmake  foo-config.cmake
2-ext-lib/libfoo/include/: foo.h
2-ext-lib/libfoosrc/: CMakeLists.txt  build.sh
2-ext-lib/libfoosrc/src/: foo-private.h  foo.c
3-inter-lib-dep/: CMakeLists.txt  build.sh
3-inter-lib-dep/hello/: CMakeLists.txt  hello.c
3-inter-lib-dep/libmsg/: CMakeLists.txt
3-inter-lib-dep/libmsg/include/: msg.h
3-inter-lib-dep/libmsg/src/: msg.c
3-inter-lib-dep/libprint/: CMakeLists.txt
3-inter-lib-dep/libprint/include/: print.h
3-inter-lib-dep/libprint/src/: print.c
4-with-lib-asm/src/: CMakeLists.txt  bar.S  foo.c  main.c
